scripts-yaml/predict-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: deploy-models-git
  labels:
    app: deploy-models-git
    app.kubernetes.io/component: deploy-models-git
    app.kubernetes.io/instance: deploy-models-git
    app.kubernetes.io/name: deploy-models-git
    app.kubernetes.io/part-of: deploy-models-git-app
    app.openshift.io/runtime: python
    app.openshift.io/runtime-version: 3.9-ubi8
spec:
  host: >-
    deploy-models-git-predict-it.apps.cluster-sdhmf.sdhmf.sandbox2860.opentlc.com
  to:
    kind: Service
    name: deploy-models-git
    weight: 100
  port:
    targetPort: 5000-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
